Adicionando layouts no exemplo08

--- a/Exemplo08/app/src/main/res/values/strings.xml
+++ b/Exemplo08/app/src/main/res/values/strings.xml
@@ -2,4 +2,19 @@
     <string name="app_name">Exemplo08</string>
     <string name="nome">Nome</string>
     <string name="ok">Ok</string>
+    <string name="email">e-mail</string>
+    <string name="observacoes">observações</string>
+    <string name="enviar">enviar</string>
+    <string name="lista_de_produtos">Lista de Produtos</string>
+    <string name="produto_a">Produto A</string>
+    <string name="reais_100">R$100,00</string>
+    <string name="produto_b">Produto B</string>
+    <string name="reais_200">R$200,00</string>
+    <string name="produto_c">Produto C</string>
+    <string name="reais_300">R$300,00</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="comprar">" Comprar "</string>
+    <string name="senha">senha</string>
+    <string name="usuario">usuario</string>
+    <string name="login">login</string>
 </resources>
