--- a/Exemplo08/app/src/main/res/values/strings.xml
+++ b/Exemplo08/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="senha">senha</string>
     <string name="usuario">usuario</string>
     <string name="login">login</string>
+    <string name="numeroUm">número um</string>
+    <string name="numeroDois">número dois</string>
+    <string name="somar">somar</string>
+    <string name="resultado">resultado</string>
+    <string name="scrollview">ScrollView</string>
 </resources>
